-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.4.0 RC
-
None
Using RC package: qt-enterprise-mac-x64-android-ios-5.4.0-rc_2014-11-13_13-45-00-89.dmg on Mac 10.9.
Building for iOS simulator (debug or release) the gallery, same game or WebView examples fails with "duplicate symbols" error:
ld: warning: directory not found for option '-L/work/build/qtsdk/packaging-tools/qt5_package_dir/lib' duplicate symbol __Z12QSG_LOG_INFOv in: /Users/caroline/Qt5.4.0/RC_89/5.4/ios/lib/libQt5Quick_iphonesimulator_debug.a(qsgcontext.o) /Users/caroline/Qt5.4.0/RC_89/5.4/ios/plugins/scenegraph/libsoftwarecontext_iphonesimulator_debug.a(renderloop.o)
Full log attached.
Note: Building the Qt Quick 2 calculator example works as expected.
- is required for
-
QTBUG-41613 Issues to be fixed before 5.4.0 RC
-
- Closed
-