Logging: use category names different from those in declarative

Otherwise we end up with duplicated symbols when linking
statically.

This partly reverts commit 139ace5b57b82396dc37a6781bfae4a251172764.

Change-Id: I0b33cc00d19e7c541b33a72a7d27e1c0a895d988
Task-number: QTBUG-42679
Reviewed-by: Andy Nichols <andy.nichols@digia.com>